build_output.txt
Processing cyd2usb (platform: espressif32; board: esp32dev; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32dev.html
PLATFORM: Espressif 32 (6.11.0) > Espressif ESP32 Dev Module
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 1.40501.0 (4.5.1) 
 - toolchain-xtensa-esp32 @ 8.4.0+2021r2-patch5
Converting espeon.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 36 compatible libraries
Scanning dependencies...
Dependency Graph
|-- ESP_DoubleResetDetector @ 1.3.2
|-- ArduinoJson @ 6.21.5
|-- TFT_eSPI @ 2.5.43
|-- FS @ 2.0.0
|-- SD @ 2.0.0
|-- SPI @ 2.0.0
|-- Wire @ 2.0.0
Building in release mode
Compiling .pio/build/cyd2usb/src/espeon.ino.cpp.o
Compiling .pio/build/cyd2usb/src/menu.cpp.o
espeon/menu.cpp: In function 'void drawFileBrowser()':
espeon/menu.cpp:187:20: error: 'TFT_GRAY' was not declared in this scope
   tft.setTextColor(TFT_GRAY);
                    ^~~~~~~~
espeon/menu.cpp:187:20: note: suggested alternative: 'TFT_CYAN'
   tft.setTextColor(TFT_GRAY);
                    ^~~~~~~~
                    TFT_CYAN
*** [.pio/build/cyd2usb/src/menu.cpp.o] Error 1
========================== [FAILED] Took 4.71 seconds ==========================

Environment    Status    Duration
-------------  --------  ------------
cyd2usb        FAILED    00:00:04.712
==================== 1 failed, 0 succeeded in 00:00:04.712 ====================
